# green-compressed-storage

./: CMakeLists.txt  README.md  green-compressed-storage.cpp  utils.cpp
scripts/: generate_query_data_shuffle.py
